--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,10 +6,11 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <application
-        android:name=".Application"
         android:name="io.flutter.app.FlutterApplication"
-        android:label="pushon3App"
+        android:label="push"
         android:icon="@mipmap/ic_launcher">
+        android:name=".Application"
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -37,8 +38,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
-                <action android:name="FLUTTER_NOTIFICATION_CLICK"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="FLUTTER_NOTIFICATION_CLICK" />
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
