--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  firebase_messaging: ^7.0.3 #no indention
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  firebase_messaging: ^7.0.3
 
 dev_dependencies:
   flutter_test:
